--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
  	<title>HEllo Corsera</title>
 </head>
 <body>
-	<h1>HEllo Coursera</h1> 	
+	<h1>HEllo Coursera. My name is Salman</h1> 	
 </body>
 </html>
