--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,10 @@
  	<title>HEllo Corsera</title>
 </head>
 <body>
-	<h1>HEllo Coursera. My name is Salman</h1> 	
+	<h1>HEllo Coursera. My name is Salman. How You doin'</h1>
+	<h1>isnt that bullshit</h1>
+	<p1>but</p1>
+	<h2>Life Goes on</h2>
+	<h5>shit</h5>	
 </body>
 </html>
