--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,10 @@
 	<h1>HEllo Coursera. My name is Salman. How You doin'</h1>
 	<h1>isnt that bullshit</h1>
 	<p1>but</p1>
-	<h2>Life Goes on</h2>
+	<h2>Lifesw Goes on</h2>
 	<h5>shit</h5>	
+	<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.2.13.0.js'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
