--- a/site/trying.html
+++ b/site/trying.html
@@ -1,10 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Coursera is Okay</title>
 </head>
 <body>
-Yes, I can not argue tham I am not learning!
+Yes, I can not argue that I am not learning!
 </body>
 </html>
