--- a/site/trying.html
+++ b/site/trying.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Coursera is Okay</title>
+	<title>div and span elements</title>
 </head>
 <body>
-Yes, I can not argue that I am not learning!
+ <div>*** DIV1 : SOme content here ***</div>
+ <div>*** DIV2 : Following right over here ***</div>
+ <span>*** SPAN 1: Following right after div 2 ***</span>
+ <div>
+ *** DIV3 : Following right after span3***
+  <span> *** span4 ****</span>
+  continue contetn of div 3 ***
+  </div>
 </body>
 </html>
